# image_classification_repo

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
docs/: Makefile  conf.py  make.bat
image_classification_repo/dataset/: make_dataset.py
image_classification_repo/features/: build_features.py
image_classification_repo/models/: deep_api.py  deep_api_ori.py  model_utils.py  optimizers.py  paths.py  test_utils.py  train_runfile.py  utils.py
image_classification_repo/tests/: test_unit_model.py
image_classification_repo/visualization/: visualize.py
models/: config.py  data_utils.py  deep_api.py  model_utils.py  paths.py  test_utils.py  train_runfile.py  utils.py
notebooks/: 1.0-image_classification_repo_start.ipynb
