# -*- coding: utf-8 -*-
[metadata]
name = image_classification_repo
summary = This is dummy project to classify the images using ML
description-file =
    README.md
author = Hem Chandra Padhalni
author-email = hem.chandra@corestack.io
version = 0.0.1
license = No license file
home-page = https://github.com/shramanpadhalni-web/image_classification_repo
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    image_classification_repo

[entry_points]

deepaas.v2.model = 
    image_classification_repo = image_classification_repo.image_classification_repo.models.deep_api

